<resources>
    <!-- Default Placeholders -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Astraeus</string>

    <!--  Placeholders  -->
    <string name="placeholder">placeholder</string>
    <string name="placeholder_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</string>
    <string name="placeholder_date">1969&#8211;07&#8211;16</string>
    <string name="placeholder_number">1609</string>
    <string name="placeholder_distance">15,329 km</string>
    <string name="placeholder_lat_long">28.573469, -80.651070</string>
    <string name="placeholder_label">Label:</string>
    <string name="placeholder_title">Title</string>
    <string name="under_construction">Under Construction</string>

    <!--  Labels  -->
    <string name="view_image_info">View Image Info</string>
    <string name="keywords">Keywords</string>
    <string name="showing_results_for_colon">Showing Results For:</string>
    <string name="saved_apods_colon">Saved Apods:</string>
    <string name="saved_epics_colon">Saved Epics:</string>
    <string name="saved_rover_photos_colon">Saved Rover Photos:</string>
    <string name="saved_ivl_images_colon">Saved IVL Images:</string>

    <!--  Apod  -->
    <string name="apod_header">Astronomy Picture of the Day</string>
    <string name="apod_image">APOD Image</string>
    <string name="apod_video">APOD video</string>
    <string name="save_apod">Save Apod</string>
    <string name="apod_blurb">Discover the cosmos! Each day a different image or photograph of our fascinating universe is featured, along with a brief explanation written by a professional astronomer. Astronomy Picture of the Day (APOD) is provided by NASA and the Michigan Technological University (MTU).</string>

    <!--  Rover  -->
    <string name="rover_photos">Rover photos</string>
    <string name="rover_image">Rover Image</string>
    <string name="launch_date_colon">Launch Date:</string>
    <string name="landing_date_colon">Landing Date:</string>
    <string name="total_photos_colon">Total Photos:</string>
    <string name="last_response_colon">Last Response:</string>
    <string name="rover_instruments">Rover Instruments</string>
    <string name="see_more_rover_images">See More Rover Images</string>

    <!--  Epic  -->
    <string name="epic_earth_photos">Epic Earth Photos</string>
    <string name="save_epic">Save Epic</string>

    <!--  Navigation Menu  -->
    <string name="menu_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_saved">Saved</string>

    <!--  Image Details  -->
    <string name="copyright_colon">Copyright:</string>
    <string name="copyright_owner">Copyright Owner</string>
    <string name="date_colon">Date:</string>
    <string name="sol_colon">Sol:</string>
    <string name="earth_date_colon">Earth Date:</string>
    <string name="camera_colon">Camera:</string>
    <string name="status_colon">Status:</string>
    <string name="taken_colon">Taken:</string>
    <string name="centroid_coords_colon">Centroid Coords:</string>
    <string name="earth_distance_colon">Earth Distance:</string>
    <string name="lunar_distance_colon">Lunar Distance:</string>
    <string name="solar_distance_colon">Solar Distance:</string>
    <string name="created_colon">Created:</string>

    <!--  Search  -->
    <string name="search_here">Search Here</string>
    <string name="see_rover_info">See rover info</string>

    <!--  Filters  -->
    <string name="all">All</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>

    <!-- Alerts -->
    <string name="storage_permissions_title">Storage Permissions Required.</string>
    <string name="download_permissions_message">To continue downloading please grant storage permissions.</string>

    <!-- Button Labels -->
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- Label Arrays -->
    <string-array name="saved_posts_tab_names">
        <item name="apod">APOD</item>
        <item name="epic">EPIC</item>
        <item name="rovers">ROVERS</item>
        <item name="ivl">IVL</item>
    </string-array>

</resources>