<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="apod"
            type="com.jamesm10101.astraeus.data.APOD" />
    </data>

    <com.google.android.material.carousel.MaskableFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgV_APOD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/apod_image"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{apod.thumbUrl != null ? apod.thumbUrl : apod.mediaSrcUrl}"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtV_APOD_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="bottom"
                        android:lineSpacingExtra="4sp"
                        android:maxLines="1"
                        android:text="@{apod.title.empty ? `Title` : apod.title}"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="@string/placeholder_title" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtV_APOD_copyright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@{apod.copyright}"
                        android:textSize="11sp"
                        android:visibility="@{apod.copyright.length() == 0 ? View.GONE : View.VISIBLE}"
                        tools:text="@string/copyright_owner" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.carousel.MaskableFrameLayout>

</layout>